# esp-crash

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  README.md  docker-compose.yml.template  esp_crash.c  esp_crash_cli.c  esp_crash_http.c  esp_crash_identifier.c  esp_crash_identifier.h  esp_crash_upload_timer.c  esp_crash_webserver.c  esp_crash_webserver.h  idf_component.yml  partitions.csv
components/esp_crash/: CMakeLists.txt  Kconfig  esp_crash.c  esp_crash.h  esp_crash_cli.c  esp_crash_cli.h  esp_crash_http.h  esp_crash_identifier.c  esp_crash_identifier.h  esp_crash_upload_timer.c  esp_crash_upload_timer.h
esp-crash-server/: Dockerfile  Dockerfile.dev  README.md  db_schema.sql  decode_module_coredump.py  device_url.py  docker-compose.yml.template  project_settings_migration.sql  requirements.txt  server.py  slack_migration.sql  test_decode_module_coredump.py  test_device_url.py
esp-crash-server/templates/: acl.html  build.html  builds.html  crash.html  dashboard.html  device.html  index.html  layout.html  navbar.html  project.html  project_settings.html  settings.html  slack_channel_selection.html  slack_test_results.html  slack_verification.html  webhooks.html
examples/esp-crash-example/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
examples/esp-crash-example/main/: esp-crash-main.c  idf_component.yml
main/: CMakeLists.txt  esp-crash-main.c
